refactor proximity and dmx modules

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 monitor_speed = 115200
 build_flags =
     -std=c++11
-    -DSERIAL_BAUDRATE=115200
+lib_deps =
+    https://github.com/FastLED/FastLED
 
 [env:uno]
 platform = atmelavr
@@ -20,8 +21,7 @@ board = uno
 framework = arduino
 build_flags =
     ${env.build_flags}
-    -DDMX_PIN=2
 lib_deps =
     ${env.lib_deps}
 platform_packages =
-  toolchain-atmelavr@>=1.70300.0
+  toolchain-atmelavr@>=3.70300.0
